--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.headerBakgroundImager{
+  /* border: 4px solid black; */
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/src/Images/Image/Rectangle\ 1.png");
+  height: 100vh;
+  width: 100%;
+  background-position: center center;
+  background-size: 100% 100%;
+  opacity: 1.5;
+}
+
+
 .App {
   text-align: center;
 }
